--- a/app/index.html
+++ b/app/index.html
@@ -7,6 +7,9 @@
     <title>carte_interactive</title>
     <!-- Place favicon.ico in the root directory -->
     <!-- build:css styles/main.css -->
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css"
+   integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ=="
+   crossorigin=""/>
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
     <!-- build:css styles/vendor.css -->
@@ -14,6 +17,9 @@
     <!-- endbower -->
     <!-- endbuild -->
     
+   <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"
+   integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw=="
+   crossorigin=""></script>
     <!-- build:js scripts/vendor/modernizr.js -->
     <script src="/bower_components/modernizr/modernizr.js"></script>
     <!-- endbuild -->
@@ -29,8 +35,7 @@
     <!--[if IE]>
       <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
-
-
+    <div id="mapid"></div>
    </main> 
    <footer>
 
