--- a/app/index.html
+++ b/app/index.html
@@ -38,12 +38,10 @@
     <!--[if IE]>
       <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
-    <div id="data">
-        
-
-      </div>
-
     <div id="mapid"></div>
+    <div id="data"></div>
+
+    
    </main> 
    <footer>
 
