--- a/app/index.html
+++ b/app/index.html
@@ -8,6 +8,8 @@
     <title>carte_interactive</title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ=="
         crossorigin="" />
+        
+        <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/boostrap.min.css">
     <link rel="stylesheet" href="styles/main.css">
     <script type="text/javascript" src="https://api.ginko.voyage/api.js"></script>
     <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw=="
@@ -21,6 +23,7 @@
     </main>
     <footer>
         <script src="/bower_components/modernizr/modernizr.js"></script>
+        <script src="/bower_components/bootstrap/dist/js/boostrap.min.js"></script>
         <script src="scripts/main.js"></script>
     </footer>
 </body>
