--- a/app/index.html
+++ b/app/index.html
@@ -18,8 +18,13 @@
 
 <body>
     <main>
-        <div id="mapid"></div>
-        <div id="data"></div>
+      <section class="wrap-home">
+        <div class="container">
+          <p>coucou</p>
+          <div id="mapid"></div>
+          <div id="data"></div>
+        </div>
+      </section>
     </main>
     <footer>
         <script src="/bower_components/modernizr/modernizr.js"></script>
