--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
 <html class="no-js" lang="">
 
 <head>
@@ -9,21 +8,23 @@
   <title>carte_interactive</title>
   <!-- Place favicon.ico in the root directory -->
   <!-- build:css styles/main.css -->
-  <link rel="stylesheet" href="styles/main.css">
-  <script type="text/javascript" src="https://api.ginko.voyage/api.js"></script>
-  <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw=="
-    crossorigin=""></script>
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ=="
+    crossorigin="" />
   <link rel="stylesheet" href="styles/main.css">
   <!-- endbuild -->
   <!-- build:css styles/vendor.css -->
-
   <!-- bower:css -->
   <!-- endbower -->
   <!-- endbuild -->
+  <script type="text/javascript" src="https://api.ginko.voyage/api.js"></script>
 
+  <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw=="
+    crossorigin=""></script>
   <!-- build:js scripts/vendor/modernizr.js -->
   <script src="/bower_components/modernizr/modernizr.js"></script>
   <!-- endbuild -->
+  <!-- development version, includes helpful console warnings -->
+  <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 </head>
 
 <body>
@@ -34,16 +35,15 @@
 
   </header>
   <main>
-    <section class="wrap-home">
-      <div class="container">
-        <p>coucou</p>
-        <div id="mapid"></div>
-        <div id="data"></div>
-      </div>
-    </section>
+    <!--[if IE]>
+      <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+    <![endif]-->
+    <div id="mapid"></div>
+    <div id="data"></div>
+
+
   </main>
   <footer>
-
 
 
   </footer>
@@ -52,20 +52,6 @@
   <!-- bower:js -->
   <script src="/bower_components/modernizr/modernizr.js"></script>
   <!-- endbower -->
-  <!-- endbuild -->
-
-  <!-- build:js scripts/plugins.js -->
-  <script src="/bower_components/bootstrap/js/dist/util.js"></script>
-  <script src="/bower_components/bootstrap/js/dist/alert.js"></script>
-  <script src="/bower_components/bootstrap/js/dist/button.js"></script>
-  <script src="/bower_components/bootstrap/js/dist/carousel.js"></script>
-  <script src="/bower_components/bootstrap/js/dist/collapse.js"></script>
-  <script src="/bower_components/bootstrap/js/dist/dropdown.js"></script>
-  <script src="/bower_components/bootstrap/js/dist/modal.js"></script>
-  <script src="/bower_components/bootstrap/js/dist/scrollspy.js"></script>
-  <script src="/bower_components/bootstrap/js/dist/tab.js"></script>
-  <script src="/bower_components/bootstrap/js/dist/tooltip.js"></script>
-  <script src="/bower_components/bootstrap/js/dist/popover.js"></script>
   <!-- endbuild -->
 
   <!-- build:js scripts/main.js -->
