--- a/app/index.html
+++ b/app/index.html
@@ -14,6 +14,8 @@
   <!-- endbuild -->
   <!-- build:css styles/vendor.css -->
   <!-- bower:css -->
+  <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.min.css">
+ 
   <!-- endbower -->
   <!-- endbuild -->
   <script type="text/javascript" src="https://api.ginko.voyage/api.js"></script>
@@ -22,6 +24,7 @@
     crossorigin=""></script>
   <!-- build:js scripts/vendor/modernizr.js -->
   <script src="/bower_components/modernizr/modernizr.js"></script>
+
   <!-- endbuild -->
   <!-- development version, includes helpful console warnings -->
   <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
@@ -35,13 +38,18 @@
 
   </header>
   <main>
-    <!--[if IE]>
+    <section class="wrap-home">
+      <div class="container">
+        <div class="row">
+          <!--[if IE]>
       <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
-    <div id="mapid"></div>
-    <div id="data"></div>
-
-
+          <p>test</p>
+          <div id="mapid"></div>
+          <div id="data"></div>
+        </div>
+      </div>
+    </section>
   </main>
   <footer>
 
@@ -50,7 +58,7 @@
 
   <!-- build:js scripts/vendor.js -->
   <!-- bower:js -->
-  <script src="/bower_components/modernizr/modernizr.js"></script>
+  <script src="/bower_components/bootstrap/dist/css/bootstrap.min.js"></script>
   <!-- endbower -->
   <!-- endbuild -->
 
