--- a/app/index.html
+++ b/app/index.html
@@ -14,7 +14,6 @@
   <!-- endbuild -->
   <!-- build:css styles/vendor.css -->
   <!-- bower:css -->
-  <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.min.css">
   <!-- endbower -->
   <!-- endbuild -->
   <script type="text/javascript" src="https://api.ginko.voyage/api.js"></script>
@@ -57,9 +56,9 @@
 
   <!-- build:js scripts/vendor.js -->
   <!-- bower:js -->
-  <script src="/bower_components/jquery/dist/jquery.min.js"></script>
   <script src="/bower_components/modernizr/modernizr.js"></script>
-  <script src="/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+  <script src="/bower_components/jquery/dist/jquery.min.js"></script>
+  <script src="/bower_components/popper.js/src/popper.js"></script>
   <!-- endbower -->
   <!-- endbuild -->
 
