--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <title>Pass & Go</title>
   <!-- Place favicon.ico in the root directory -->
   <!-- build:css styles/main.css -->
@@ -28,48 +28,52 @@
 
 <body>
   <header class="container">
-      <nav class="navbar navbar-light row">
+    <nav class="navbar navbar-light row">
 
-        <a class="navbar-brand col-4" href="index.html">
-          <img src="medias/logo.png">
-        </a>
-        <button class="navbar-toggler col-2" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
-          aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Carte des arrêts
-                <span class="sr-only">(current)</span>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">À propos</a>
-            </li>
+      <a class="navbar-brand col-4" href="index.html">
+        <img src="medias/logo.png">
+      </a>
+      <button class="navbar-toggler col-2" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
+        aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Carte des arrêts
+              <span class="sr-only">(current)</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">À propos</a>
+          </li>
 
-          </ul>
-        </div>
-      </nav>
+        </ul>
+      </div>
+    </nav>
   </header>
   <main>
     <section class="wrap-home">
-      
+
       <div class="container">
         <div class="row">
           <!--[if IE]>
       <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
-          <p>test</p>
-          <div id="mapid"></div>
-          <div id="data"></div>
+          <div class="col-12">
+            <h1>test</h1>
+          </div>
+          <div class="col-12">
+            <div id="map"></div>
+          </div>
+  
         </div>
       </div>
     </section>
   </main>
   <footer>
-      <button onclick="getLocation()">Mais ou est Jeff Tuche Nico ?</button>
-      <p id="geoloc"></p>
+    <button onclick="getLocation()">Mais ou est Jeff Tuche Nico ?</button>
+    <p id="geoloc"></p>
   </footer>
 
   <!-- build:js scripts/vendor.js -->
