--- a/app/index.html
+++ b/app/index.html
@@ -72,8 +72,8 @@
     </section>
   </main>
   <footer>
-    <button onclick="getLocation()">Mais ou est Jeff Tuche Nico ?</button>
-    <p id="geoloc"></p>
+    <!-- <button onclick="getLocation()">Mais ou est Jeff Tuche Nico ?</button>
+    <p id="geoloc"></p> -->
   </footer>
 
   <!-- build:js scripts/vendor.js -->
