--- a/app/index.html
+++ b/app/index.html
@@ -29,7 +29,7 @@
   <header class="container">
     <nav class="navbar navbar-light row">
 
-      <a class="navbar-brand col-4" href="index.html">
+      <a class="navbar-brand col-4 col-md-2" href="index.html">
         <img src="medias/logo.png">
       </a>
       <button class="navbar-toggler col-2" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
@@ -63,7 +63,7 @@
             <h1>test</h1>
           </div>
           <div class="col-12">
-            <div id="map"></div>
+            <div id="map" onclick="loadMap();"></div>
           </div>
   
         </div>
