mise a jour bower

--- a/app/index.html
+++ b/app/index.html
@@ -63,7 +63,7 @@
             <h1>test</h1>
           </div>
           <div class="col-12">
-            <div id="map" onclick="loadMap();"></div>
+            <div id="map"></div>
           </div>
   
         </div>
@@ -78,12 +78,13 @@
   <!-- build:js scripts/vendor.js -->
   <!-- bower:js -->
   <script src="/bower_components/modernizr/modernizr.js"></script>
+  <script src="/bower_components/popper.js/dist/umd/popper.js"></script>
+  <script src="/bower_components/jquery/dist/jquery.js"></script>
   <!-- endbower -->
   <!-- endbuild -->
 
   <!-- build:js scripts/plugins.js -->
-  <script src="/bower_components/jquery/dist/jquery.min.js"></script>
-  <script src="/bower_components/boostrap/js/bootstrap.min.js"></script>
+
   <script src="/bower_components/bootstrap/js/dist/util.js"></script>
   <script src="/bower_components/bootstrap/js/dist/alert.js"></script>
   <script src="/bower_components/bootstrap/js/dist/button.js"></script>
