--- a/app/index.html
+++ b/app/index.html
@@ -44,7 +44,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">À propos</a>
+            <a class="nav-link" href="propos.html">À propos</a>
           </li>
 
         </ul>
