--- a/app/index.html
+++ b/app/index.html
@@ -60,7 +60,7 @@
       <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
           <div class="col-12">
-            <h1>test</h1>
+            <h1>Trouver un arrêt autour de moi</h1>
           </div>
           <div class="col-12">
             <div id="map"></div>
