--- a/app/propos.html
+++ b/app/propos.html
@@ -56,13 +56,33 @@
     </header>
     <main>
         <section class="wrap-propos">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12">
+                        <h1>À Propos</h1>
+                        <h2>Lorem Ipsum</h2>
+                        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium,
+                            totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae
+                            dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit,
+                            sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam
+                            est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam
+                            eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad
+                            minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid
+                            ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse
+                            quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"
+                        </p>
 
-
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
-    <footer>
-        <!-- <button onclick="getLocation()">Mais ou est Jeff Tuche Nico ?</button>
-    <p id="geoloc"></p> -->
+    <footer class="wrap-footer">
+        <p>Réalise par l'API
+            <a class="navbar-brand" href="http://www.ginko.voyage/">
+                <img src="medias/ginko.png" width="100" height="50">
+            </a>
+        </p>
     </footer>
 
     <!-- build:js scripts/vendor.js -->
