--- a/app/index.html
+++ b/app/index.html
@@ -5,8 +5,9 @@
   <meta charset="utf-8">
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-  <title>Pass & Go</title> 
-   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ==" crossorigin=""/>
+  <title>Pass & Go</title>
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ=="
+    crossorigin="" />
 
   <!-- Place favicon.ico in the root directory -->
   <!-- build:css styles/main.css -->
@@ -17,7 +18,8 @@
   <!-- endbower -->
   <!-- endbuild -->
   <script type="text/javascript" src="https://api.ginko.voyage/api.js"></script>
-  <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw==" crossorigin=""></script>
+  <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw=="
+    crossorigin=""></script>
   <!-- build:js scripts/vendor/modernizr.js -->
   <script src="/bower_components/modernizr/modernizr.js"></script>
 
@@ -65,12 +67,13 @@
           <div class="col-12">
             <div id="map"></div>
           </div>
-  
+
         </div>
       </div>
     </section>
   </main>
   <footer>
+    <p>&#9400; Julien - Mehdi - Charlotte</p>
     <!-- <button onclick="getLocation()">Mais ou est Jeff Tuche Nico ?</button>
     <p id="geoloc"></p> -->
   </footer>
